Fix button alignment and input styling

--- a/src/app/pages/listelements/listelements.component.scss
+++ b/src/app/pages/listelements/listelements.component.scss
@@ -23,5 +23,14 @@
     align-items: center;
     padding: 0 0 15px 0;
   }
+  .mat-mdc-form-field-bottom-align ::before{
+    content:'';
+    display: inline;
+    height: 1px;
+  }
+  input{
+    font-size: 14px;
+    color: var(--black-010);
+  }
   
   }
